# takum

./: CMakeLists.txt  README.md
src/: takum.hpp
tests/: CMakeLists.txt  test_takum.cpp
